# loggers_comparison

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
easylogging_example/: CMakeLists.txt  el_example.cpp  el_functions.cpp  el_functions.h
easylogging_exanple/: CMakeLists.txt
glog_example/: CMakeLists.txt  glog_example.cpp  glog_functions.cpp  glog_functions.h
logs/: async_log.txt
spdlog_example/: CMakeLists.txt  async_logger.cpp  async_logger.h  basic_usage.example.h  basic_usage_example.cpp  console_logger.cpp  console_logger.h  handmade_logger.cpp  handmade_logger.h  spdlog_example.cpp  stopwatch.cpp  stopwatch.h  user_defined_object_logger.cpp  user_defined_object_logger.h
